--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Hero Section with Background Video -->
   <section class="hero">
-    <video autoplay muted loop class="background-video">
+    <video  class="background-video" autoplay muted loop playsinline>
       <source src="videos/hero_background.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
